--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ input[type="text"] {
      background-color: white;
      border-radius: 50%;
      padding: 5px;
+     cursor: pointer;
 }
 
 input[type="text"]::placeholder {
